<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/addTaskActivity"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".task_actions.CreateTaskActivity">

    <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/redhatdisplay_black"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title"
            android:textAppearance="@style/title"
            android:textColor="#4CAF50"
            android:textSize="36sp"
            app:fontFamily="@font/redhatdisplay_bold"
            app:layout_constraintBottom_toTopOf="@+id/editTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/editTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/title_hint"
            android:inputType="textPersonName"
            android:textAppearance="@style/InputHint"
            android:textColor="#FFFFFF"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/editDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <EditText
            android:id="@+id/editDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lines="2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:textAppearance="@style/InputHint"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTitle" />

    <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/priorityButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorPriority1"
            android:clickable="true"
            android:onClick="onPriorityCheck"
            app:checkedButton="@id/buttonPriority1"
            app:layout_constraintEnd_toEndOf="@+id/editDescription"
            app:layout_constraintStart_toStartOf="@+id/editDescription"
            app:layout_constraintTop_toBottomOf="@+id/textPriorityTitle"
            app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPriority1"
                style="@style/priorityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPriorityCheck"
                android:text="1"
                android:textColor="#FFFFFF"
                app:rippleColor="@android:color/white"
                app:strokeColor="@color/colorPriority1"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPriority2"
                style="@style/priorityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onPriorityCheck"
                android:text="2"
                android:textColor="#FFFFFF"
                app:rippleColor="@android:color/white"
                app:strokeColor="@color/colorPriority2"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPriority3"
                style="@style/priorityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPriority3"
                android:onClick="onPriorityCheck"
                android:text="3"
                android:textColor="#FFFFFF"
                app:rippleColor="@android:color/white"
                app:strokeColor="@color/colorPriority3"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPriority4"
                style="@style/priorityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPriority4"
                android:onClick="onPriorityCheck"
                android:text="4"
                android:textColor="#FFFFFF"
                app:rippleColor="@android:color/white"
                app:strokeColor="@color/colorPriority4"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPriority5"
                style="@style/priorityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPriority5"
                android:onClick="onPriorityCheck"
                android:text="5"
                android:textColor="#FFFFFF"
                app:rippleColor="@android:color/white"
                app:strokeColor="@color/colorPriority5"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <Button
            android:id="@+id/buttonConfirmAdd"
            style="@style/title"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="#4CAF50"
            android:onClick="onConfirm"
            android:text="@string/confirm_add_task"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/dueDate"
            app:layout_constraintStart_toStartOf="@+id/dueDate"
            app:layout_constraintTop_toBottomOf="@+id/dueDate"
            />

    <TextView
            android:id="@+id/textPriorityTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:text="@string/textPriorityTitle"
            android:textAppearance="@style/InputHint"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/priorityButtons"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <Spinner
            android:id="@+id/repeatSpinner"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTypesToggleGroup" />

    <Spinner
            android:id="@+id/weatherSpinner"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:spinnerMode="dropdown"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTypesToggleGroup"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/taskTypesToggleGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:checkedButton="@id/dateTypeButton"
            app:layout_constraintEnd_toEndOf="@+id/priorityButtons"
            app:layout_constraintStart_toStartOf="@+id/priorityButtons"
            app:layout_constraintTop_toBottomOf="@id/mapLayout"
            app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/dateTypeButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onToggleCondition"
                android:text="Date"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/weatherTypeButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onToggleCondition"
                android:text="Weather"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/repeatTypeButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onToggleCondition"
                android:text="Repeat"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/dueDate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:onClick="openCalendar"
            android:text="Condition Information"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textAppearance="@style/InputHint"
            android:textColor="@android:color/darker_gray"
            app:backgroundTint="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="@+id/taskTypesToggleGroup"
            app:layout_constraintStart_toStartOf="@+id/taskTypesToggleGroup"
            app:layout_constraintTop_toBottomOf="@+id/taskTypesToggleGroup"
            app:strokeColor="@android:color/secondary_text_light"
            app:strokeWidth="2dp"/>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="10dp"
            android:id="@+id/mapLayout"
            app:layout_constraintEnd_toEndOf="@+id/editDescription"
            app:layout_constraintStart_toStartOf="@+id/priorityButtons"
            app:layout_constraintTop_toBottomOf="@+id/priorityButtons"
    />

</androidx.constraintlayout.widget.ConstraintLayout>