<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title">
        Create Task
    </string>
    <string name="title_hint">
        Title…
    </string>
    <string name="description_hint">
        Description…
    </string>
    <string name="location_hint">
        Location…
    </string>
    <string name="confirm_add_task">
        ADD TASK
    </string>
    <string name="textPriorityTitle">
        Priority
    </string>
    <string name="textEditTitle">
        Edit Task
    </string>
    <string name="confirm_edit_task">
        UPDATE TASK
    </string>
</resources>
